--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 # Разрешаем мониторить эти папки
 !*.github/
 !*.github/workflows
+!*cmd
+!*cmd/examplegolangdebproject
 !*debian
 !*debian/source
 !*internal
